<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sebsish.smarthomeapp.ui.EmptyHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_empty" />

    <fragment
        android:id="@+id/navigation_scenarios"
        android:name="com.sebsish.smarthomeapp.ui.ScenariosFragment"
        android:label="@string/title_scenarios"
        tools:layout="@layout/fragment_scenarios" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.sebsish.smarthomeapp.ui.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>