<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity"
    android:background="?attr/backgroundColor">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/SetupExitBtn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:contentDescription="@string/backBtnDescription"
        android:onClick="Exit" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/setupDevice"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/deviceHeaderTextAppearance"
                android:layout_marginTop="10dp"
                android:text="@string/hubs_header" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        style="@style/deviceImageBtnStyle"
                        android:background="@drawable/device_electric_range"
                        android:backgroundTint="#BEBEBE"/>

                    <TextView
                        style="@style/deviceTextAppearance"
                        android:text="@string/wifi_hub" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/sockets_header"
                android:textAlignment="center"
                android:textAppearance="@style/DefaultTextAppearance"
                android:textColor="@color/grey" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageButton
                        style="@style/deviceImageBtnStyle"
                        android:background="@drawable/device_socket_f" />

                    <TextView
                        style="@style/deviceTextAppearance"
                        android:text="@string/wifi_socket" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/deviceHeaderTextAppearance"
                android:text="@string/lights_header" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageButton
                        style="@style/deviceImageBtnStyle"
                        android:background="@drawable/device_light" />

                    <TextView
                        style="@style/deviceTextAppearance"
                        android:text="@string/wifi_light" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/deviceHeaderTextAppearance"
                android:text="@string/pwrbtns_header" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageButton
                        style="@style/deviceImageBtnStyle"
                        android:background="@drawable/device_power_button" />

                    <TextView
                        style="@style/deviceTextAppearance"
                        android:text="@string/wifi_pwrbtn" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/deviceHeaderTextAppearance"
                android:text="@string/sensors_header" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageButton
                        style="@style/deviceImageBtnStyle"
                        android:background="@drawable/device_temperature" />

                    <TextView
                        style="@style/deviceTextAppearance"
                        android:text="@string/wifi_temp_and_humid_sensor" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>