<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="?attr/backgroundColor">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/RegExitBtn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:contentDescription="@string/backBtnDescription"
        android:onClick="Exit" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/regUsername"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/register"
        android:textColor="?attr/colorPrimary"
        android:textSize="36sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regUsername"
        style="@style/TextFieldStyle"
        android:layout_below="@id/textView"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="50dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regUsernameEdit"
            style="@style/editTextStyle"
            android:hint="@string/name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regEmail"
        android:layout_below="@id/regUsername"
        style="@style/TextFieldStyle"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regEmailEdit"
            style="@style/editTextStyle"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regPassword"
        style="@style/TextFieldStyle"
        android:layout_below="@id/regEmail"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regPasswordEdit"
            style="@style/editTextStyle"
            android:hint="@string/pass"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatRegPassword"
        style="@style/TextFieldStyle"
        android:layout_below="@id/regPassword"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatRegPasswordEdit"
            style="@style/editTextStyle"
            android:hint="@string/repeat_pass"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:onClick="register"
        android:id="@+id/regBtn"
        style="@style/bigButtonsStyle"
        android:layout_below="@id/repeatRegPassword"
        android:layout_marginTop="50dp"
        android:backgroundTint="?attr/buttonTint"
        android:enabled="false"
        android:text="@string/regBtn"
        android:textAppearance="@style/bigButtonTextAppearance" />

</RelativeLayout>