<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoveryActivity"
    android:background="?attr/backgroundColor"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/RecoveryExitBtn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:contentDescription="@string/backBtnDescription"
        android:onClick="Exit" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/recoveryEmail"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/recovery"
        android:textColor="?attr/colorPrimary"
        android:textSize="36sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recoveryEmail"
        style="@style/TextFieldStyle"
        android:layout_below="@id/textView"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="25dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recoveryEmailEdit"
            style="@style/editTextStyle"
            android:hint="@string/email_recovery"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/recoveryBtn"
        style="@style/bigButtonsStyle"
        android:layout_below="@id/recoveryEmail"
        android:layout_marginTop="30dp"

        android:backgroundTint="?attr/buttonTint"
        android:enabled="false"
        android:onClick="recovery"
        android:text="@string/recoveryBtn"
        android:textAppearance="@style/bigButtonTextAppearance" />

</RelativeLayout>