<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AccountFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_baseline_account_circle_96dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/accountUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_icon"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/user_icon"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountUsername"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/user_icon"
        android:text="@string/user_edit_description"
        android:textAlignment="center"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/to_user_edit_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignTop="@+id/user_icon"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/edit_user_info"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:rotation="180" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_user_info"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        android:background="@drawable/bg_edittext"
        android:backgroundTint="?attr/panelBackground">
        <LinearLayout
            android:id="@+id/houseControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="?attr/panelBackground">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/ic_home_black_24dp" />
            <Button
                android:shadowColor="?attr/panelBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                style="?android:attr/borderlessButtonStyle"
                android:backgroundTint="?attr/panelBackground"
                android:text="@string/houseControl"
                android:textAlignment="textStart"
                android:textAppearance="@style/DefaultTextAppearance"
                android:textColor="?attr/colorPrimary" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="75dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/ic_baseline_arrow_back_ios_24"
                android:rotation="180" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/houseControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="?attr/panelBackground">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/ic_home_black_24dp" />
            <Button
                android:shadowColor="?attr/panelBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                style="?android:attr/borderlessButtonStyle"
                android:backgroundTint="?attr/panelBackground"
                android:text="@string/houseControl"
                android:textAlignment="textStart"
                android:textAppearance="@style/DefaultTextAppearance"
                android:textColor="?attr/colorPrimary" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="75dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/ic_baseline_arrow_back_ios_24"
                android:rotation="180" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/houseControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="?attr/panelBackground">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/ic_home_black_24dp" />
            <Button
                android:shadowColor="?attr/panelBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                style="?android:attr/borderlessButtonStyle"
                android:backgroundTint="?attr/panelBackground"
                android:text="@string/houseControl"
                android:textAlignment="textStart"
                android:textAppearance="@style/DefaultTextAppearance"
                android:textColor="?attr/colorPrimary" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="75dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/ic_baseline_arrow_back_ios_24"
                android:rotation="180" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:onClick="accountExit"
        android:id="@+id/accountExitButton"
        style="@style/bigButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/exit"
        android:textAppearance="@style/DefaultTextAppearance"
        android:textColor="@color/grey" />


</RelativeLayout>